# Neural-Network

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Network/: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  Definisions.h  Except.cpp  Except.h  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  main.cpp  net.cpp  net.h
test/: CMakeLists.txt  Except.cpp  main.cpp  test.cpp  test.h
